--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,10 @@
 envlist = py27,py3
 
 [testenv]
-commands = pep8 --repeat --ignore=E202,E501 wells
+commands = pycodestyle --repeat --ignore=E202,E501,W504 wells
            pylint --disable=missing-docstring,invalid-name,global-statement wells
            py.test wells
 whitelist_externals = make
-deps = pep8
+deps = pycodestyle
        pylint
        pytest
