--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.5"
   - "3.6"
   - "pypy"
-  - "pypy3.3-5.5-alpha"
+  - "pypy3.5"
 install:
   - pip install -r requirements-dev.txt
 script: tox
