--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,9 @@ envlist = py27,py3
 
 [testenv]
 commands = pycodestyle --repeat --ignore=E202,E501,W504 wells
-           pylint --disable=missing-docstring,invalid-name,global-statement wells
+           pylint --disable=missing-docstring,invalid-name,global-statement,useless-object-inheritance wells
            py.test wells
-whitelist_externals = make
 deps = pycodestyle
-       pylint
+       py27: pylint>=1.9,<2.0
+       py3: pylint
        pytest
